@@ -29,6 +29,6 @@ libsvg_la_SOURCES = 		\
 	svg.h
 
 libsvg_la_LDFLAGS =  -avoid-version -module $(no_undefined)
-libsvg_la_LIBADD = $(top_builddir)/librsvg-2.la $(top_builddir)/librsvg-2-libart.la $(GTK_LIBS) $(LIBRSVG_LIBS) $(LIBGNOME_VFS_LIBS) $(LIBCROCO_LIBS)
+libsvg_la_LIBADD = $(top_builddir)/librsvg-2.la $(GTK_LIBS) $(LIBRSVG_LIBS) $(LIBGNOME_VFS_LIBS) $(LIBCROCO_LIBS)
 
 EXTRA_DIST = $(libsvg_la_SOURCES)
